--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
 <title>Adam Arzouni</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+
+<!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-MmSb+e0+VYhkz7u4X9+smf+FhXh74Vtfx0RrH5D/YVw+6ZnZqD2p3B5aV1GFbkR6gVPMj1pKJp9QYvURh1WbZg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- Custom CSS -->
 <link rel="stylesheet" href="style.css">
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-<!-- Toggles -->
-<div class="theme-switch" onclick="toggleMode()">🌞 / 🌙</div>
+<!-- Theme & Language Toggles -->
+<div class="theme-switch" onclick="toggleMode()"><i class="fas fa-sun"></i> / <i class="fas fa-moon"></i></div>
 <div class="lang-switch" onclick="toggleLang()">EN / FR</div>
 
 <!-- Navigation -->
@@ -28,63 +34,86 @@
   <h1>Adam Arzouni</h1>
   <p class="en show">Mechanical Engineer • Aerospace • Creative Technologist</p>
   <p class="fr">Ingénieur Mécanique • Aérospatial • Créatif Technologique</p>
-  <img class="profile-img" src="images/me.jpg">
+  <img class="profile-img" src="images/me.jpg" alt="Adam Arzouni">
 </header>
 
 <!-- About -->
 <section id="about" class="section">
-  <p class="en show">Mechanical engineer in Montreal mixing aerospace with creative technology.</p>
-  <p class="fr">Ingénieur mécanique à Montréal, combinant aérospatial et technologie créative.</p>
+  <p class="en show">
+    Mechanical engineer based in Montreal. I mix aerospace engineering with creative technology — from Arduino builds to TV apps.
+  </p>
+  <p class="fr">
+    Ingénieur mécanique basé à Montréal. Je combine l’ingénierie aérospatiale avec la technologie créative — des projets Arduino aux applications TV.
+  </p>
 </section>
 
 <!-- Projects -->
 <section id="projects" class="section">
   <div class="card">
     <h3>Wedding Rotary Phone</h3>
-    <img src="images/wedding1.jpg">
-    <p>Arduino + Teensy recording phone for wedding guests.</p>
+    <img src="images/wedding1.jpg" alt="Wedding Rotary Phone">
+    <p>Converted an old rotary phone into a recording station using Arduino + Teensy, letting guests leave voice messages.</p>
   </div>
 
   <div class="card">
     <h3>Samsung TV App</h3>
-    <img src="images/tvapp1.jpg">
-    <p>Tizen smart TV app.</p>
+    <img src="images/tvapp1.jpg" alt="Samsung TV App">
+    <p>Developed a Tizen-based smart TV app with clean UI for content browsing.</p>
+  </div>
+
+  <div class="card">
+    <h3>Photography</h3>
+    <img src="images/photo1.jpg" alt="Photography">
+    <img src="images/photo2.jpg" alt="Photography">
   </div>
 </section>
 
 <!-- Experience -->
 <section id="experience" class="section">
   <b>Pratt & Whitney Canada – Account Manager</b>
-  <p>Managed aerospace projects and client relationships.</p>
+  <p>Managed aerospace projects, coordinated engineering teams, and maintained client relationships.</p>
 </section>
 
 <!-- Contact -->
 <section id="contact" class="section">
-<form action="https://formspree.io/f/xzdejweq" method="POST">
-  <input name="name" placeholder="Name">
-  <input name="email" placeholder="Email">
-  <textarea name="message" placeholder="Message"></textarea>
-  <button>Send</button>
-</form>
+  <h2>Ready to start a project together?</h2>
+  <p>I'd love to work with you. Fill out the form below to tell me more:</p>
+  <form action="https://formspree.io/f/xzdejweq" method="POST">
+    <input name="name" placeholder="Name" required>
+    <input name="email" placeholder="Email" type="email" required>
+    <textarea name="message" placeholder="Message" required></textarea>
+    <button type="submit">Send</button>
+  </form>
 </section>
 
-<button id="topBtn" onclick="window.scrollTo({top:0,behavior:'smooth'})">↑</button>
+<!-- Back to top -->
+<button id="topBtn"><i class="fas fa-arrow-up"></i></button>
 
+<!-- Scripts -->
 <script>
 function toggleMode(){
   document.body.classList.toggle("light");
 }
 
-let english=true;
+let english = true;
 function toggleLang(){
-  english=!english;
-  document.querySelectorAll(".en").forEach(e=>e.classList.toggle("show",english));
-  document.querySelectorAll(".fr").forEach(f=>f.classList.toggle("show",!english));
+  english = !english;
+  document.querySelectorAll(".en").forEach(e => e.classList.toggle("show", english));
+  document.querySelectorAll(".fr").forEach(f => f.classList.toggle("show", !english));
 }
 
-function go(id){document.getElementById(id).scrollIntoView({behavior:"smooth"})}
+function go(id){
+  document.getElementById(id).scrollIntoView({behavior:"smooth"});
+}
 
-window.onscroll=()=>{topBtn.style.display=window.scrollY>400?"block":"none"}
+window.onscroll = () => {
+  document.getElementById("topBtn").style.display = window.scrollY > 400 ? "block" : "none";
+}
+
+// Force English by default
+window.onload = () => {
+  document.querySelectorAll(".en").forEach(e => e.classList.add("show"));
+}
 </script>
 
 </body>
