--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 
-<!-- Font Awesome CDN -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-MmSb+e0+VYhkz7u4X9+smf+FhXh74Vtfx0RrH5D/YVw+6ZnZqD2p3B5aV1GFbkR6gVPMj1pKJp9QYvURh1WbZg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
 
 <!-- Custom CSS -->
 <link rel="stylesheet" href="style.css">
@@ -33,7 +33,7 @@
 </nav>
 
 <!-- Hero Section -->
-<header class="header">
+<header class="header section">
   <h1>Adam Arzouni</h1>
   <p class="en show">Mechanical Engineer • Aerospace • Creative Technologist</p>
   <p class="fr">Ingénieur Mécanique • Aérospatial • Créatif Technologique</p>
@@ -82,7 +82,6 @@
 <section id="experience" class="section">
   <h2 class="section-header en show">Experience</h2>
   <h2 class="section-header fr">Expérience</h2>
-
   <b>Pratt & Whitney Canada – Account Manager</b>
   <p>Managed aerospace projects, coordinated engineering teams, and maintained strong client relationships. Experience includes project management, technical consulting, and creative tech integration.</p>
 </section>
@@ -109,13 +108,17 @@
   </form>
 </section>
 
-<!-- Project Modal -->
-<div id="projectModal" class="modal">
-  <div class="modal-content">
+<!-- Project Full-Page Modal -->
+<div id="projectModal" class="modal-full">
+  <div class="modal-full-content">
     <span class="close" onclick="closeProject()">&times;</span>
-    <h3 id="modal-title"></h3>
+    <h2 id="modal-title"></h2>
     <p id="modal-desc"></p>
-    <div id="modal-images" class="modal-images"></div>
+    <div class="gallery">
+      <button class="prev" onclick="changeImage(-1)"><i class="fas fa-chevron-left"></i></button>
+      <img id="modal-main-img" src="" alt="Project Image">
+      <button class="next" onclick="changeImage(1)"><i class="fas fa-chevron-right"></i></button>
+    </div>
   </div>
 </div>
 
@@ -124,10 +127,12 @@
 
 <!-- Scripts -->
 <script>
+// Dark/Light Mode
 function toggleMode(){
   document.body.classList.toggle("light");
 }
 
+// Language Toggle
 let english = true;
 function toggleLang(){
   english = !english;
@@ -135,12 +140,13 @@ function toggleLang(){
   document.querySelectorAll(".fr").forEach(f=>f.classList.toggle("show", !english));
 }
 
+// Navigation Scroll
 function go(id){
   document.getElementById(id).scrollIntoView({behavior:"smooth"});
 }
 
 // Scroll fade-in
-const sections = document.querySelectorAll('.section, .card, .header');
+const sections = document.querySelectorAll('.section, .card, .header, .project-card');
 const observer = new IntersectionObserver((entries)=>{
   entries.forEach(entry=>{
     if(entry.isIntersecting) entry.target.classList.add('visible');
@@ -154,7 +160,7 @@ const topBtn = document.getElementById("topBtn");
 window.onscroll = () => topBtn.style.display = window.scrollY>400?"block":"none";
 topBtn.addEventListener("click", ()=> window.scrollTo({top:0, behavior:"smooth"}));
 
-// Projects Data
+// Project Data
 const projectsData = {
   wedding:{
     title:"Wedding Rotary Phone",
@@ -173,22 +179,31 @@ const projectsData = {
   }
 };
 
+// Full-page modal
+let currentProject = null;
+let currentImageIndex = 0;
+
 function openProject(id){
   const modal = document.getElementById("projectModal");
   modal.style.display = "block";
-  document.getElementById("modal-title").innerText = projectsData[id].title;
-  document.getElementById("modal-desc").innerText = projectsData[id].desc;
-  const imgContainer = document.getElementById("modal-images");
-  imgContainer.innerHTML="";
-  projectsData[id].images.forEach(src=>{
-    const img=document.createElement("img");
-    img.src=src;
-    imgContainer.appendChild(img);
-  });
+  currentProject = projectsData[id];
+  currentImageIndex = 0;
+  document.getElementById("modal-title").innerText = currentProject.title;
+  document.getElementById("modal-desc").innerText = currentProject.desc;
+  document.getElementById("modal-main-img").src = currentProject.images[currentImageIndex];
+}
+
+function changeImage(direction){
+  if(!currentProject) return;
+  currentImageIndex += direction;
+  if(currentImageIndex < 0) currentImageIndex = currentProject.images.length - 1;
+  if(currentImageIndex >= currentProject.images.length) currentImageIndex = 0;
+  document.getElementById("modal-main-img").src = currentProject.images[currentImageIndex];
 }
 
 function closeProject(){
   document.getElementById("projectModal").style.display = "none";
+  currentProject = null;
 }
 
 // Close modal on outside click
@@ -199,6 +214,7 @@ window.onclick = function(e){
 // Force English default
 window.onload = ()=>{
   document.querySelectorAll(".en").forEach(e=>e.classList.add("show"));
+  document.querySelectorAll(".fr").forEach(f=>f.classList.remove("show"));
 }
 </script>
 
