Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 </main>
 
-<!-- ================== FULL-PAGE PROJECT MODAL ================== -->
+<!-- ================== PROJECT MODAL ================== -->
 <div id="projectModal" class="modal-full">
   <div class="modal-full-content">
     <span class="close" onclick="closeProject()">&times;</span>
@@ -127,7 +127,7 @@
   </div>
 </div>
 
-<!-- ================== BACK TO TOP BUTTON ================== -->
+<!-- ================== BACK TO TOP ================== -->
 <button id="topBtn"><i class="fas fa-arrow-up"></i></button>
 
 <script src="script.js"></script>
