--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Adam Arzouni</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Google Font -->
+<!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 
 <!-- Font Awesome -->
@@ -16,12 +16,6 @@
 </head>
 <body>
 
-<!-- ================== TOGGLES ================== -->
-<div class="theme-switch" onclick="toggleMode()">
-  <i class="fas fa-lightbulb"></i>
-</div>
-
-<div class="lang-switch" onclick="toggleLang()">EN / FR</div>
 
 <!-- ================== NAVIGATION ================== -->
 <nav class="top-nav">
@@ -30,6 +24,11 @@
   <button onclick="goToSection('experience')">Experience</button>
   <button onclick="goToSection('contact')">Contact</button>
 </nav>
+<!-- ================== TOGGLES ================== -->
+<div class="theme-switch" onclick="toggleMode()">
+  <i class="fas fa-lightbulb"></i>
+</div>
+<div class="lang-switch" onclick="toggleLang()">EN / FR</div>
 
 <main>
 
@@ -41,7 +40,7 @@
     <img class="profile-img fade-in" src="images/me.jpg" alt="Adam Arzouni">
   </header>
 
-  <!-- ===== ABOUT SECTION ===== -->
+  <!-- ===== ABOUT ===== -->
   <section id="about" class="section fade-in">
     <h2 class="section-header en show">About Me</h2>
     <h2 class="section-header fr">À propos</h2>
@@ -53,22 +52,19 @@
     </p>
   </section>
 
-  <!-- ===== PROJECTS SECTION ===== -->
+  <!-- ===== PROJECTS ===== -->
   <section id="projects" class="section fade-in">
     <h2 class="section-header en show">Projects</h2>
     <h2 class="section-header fr">Projets</h2>
-
     <div class="projects-grid">
       <div class="project-card" data-project="wedding" onclick="openProject('wedding')">
         <i class="fas fa-phone-alt fa-3x"></i>
         <p>Wedding Rotary Phone</p>
       </div>
-
       <div class="project-card" data-project="tvapp" onclick="openProject('tvapp')">
         <i class="fas fa-tv fa-3x"></i>
         <p>Samsung TV App</p>
       </div>
-
       <div class="project-card" data-project="photography" onclick="openProject('photography')">
         <i class="fas fa-camera-retro fa-3x"></i>
         <p>Photography</p>
@@ -76,36 +72,30 @@
     </div>
   </section>
 
-  <!-- ===== EXPERIENCE SECTION ===== -->
+  <!-- ===== EXPERIENCE ===== -->
   <section id="experience" class="section fade-in">
     <h2 class="section-header en show">Experience</h2>
     <h2 class="section-header fr">Expérience</h2>
-
     <div class="experience-item">
       <h3>Pratt & Whitney Canada – Account Manager</h3>
       <p>Managed aerospace projects, coordinated engineering teams, and maintained strong client relationships. Experience includes project management, technical consulting, and creative tech integration.</p>
     </div>
   </section>
 
-  <!-- ===== CONTACT SECTION ===== -->
+  <!-- ===== CONTACT ===== -->
   <section id="contact" class="section fade-in">
     <div class="contact-center">
       <h2 class="section-header en show">Contact</h2>
       <h2 class="section-header fr">Contact</h2>
-
       <h3>Ready to start a project together?</h3>
       <p>I'd love to work with you. Fill out the form below to tell me more:</p>
-
       <form action="https://formspree.io/f/xzdejweq" method="POST" class="contact-form">
         <label for="name">Name</label>
         <input name="name" placeholder="Your Name" required>
-
         <label for="email">Email</label>
         <input name="email" placeholder="Your Email" type="email" required>
-
         <label for="message">Message</label>
         <textarea name="message" placeholder="Your Message" required></textarea>
-
         <button type="submit"><i class="fas fa-paper-plane"></i> Send</button>
       </form>
     </div>
@@ -117,8 +107,10 @@
 <div id="projectModal" class="modal-full">
   <div class="modal-full-content">
     <span class="close" onclick="closeProject()">&times;</span>
-    <h2 id="modal-title"></h2>
-    <p id="modal-desc"></p>
+    <h2 id="modal-title" class="en show"></h2>
+    <h2 id="modal-title-fr" class="fr"></h2>
+    <p id="modal-desc" class="en show"></p>
+    <p id="modal-desc-fr" class="fr"></p>
     <div class="gallery">
       <button class="prev" onclick="changeImage(-1)"><i class="fas fa-chevron-left"></i></button>
       <img id="modal-main-img" src="" alt="Project Image">
