Add CV download link in About section
Added CV download link to the About section.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
     <p class="fr">
       Ingénieur mécanique basé à Montréal. Je combine l’ingénierie aérospatiale avec la technologie créative — des projets Arduino aux applications TV et à la photographie.
     </p>
+    <!-- CV Download -->
+    <a href="https://raw.githubusercontent.com/adamarzouni/adam-arzouni/main/documents/Adam_Arzouni_CV.pdf" download class="cv-btn">
+      <i class="fas fa-file-download"></i> Download CV
+    </a>
   </section>
 
   <!-- ===== PROJECTS ===== -->
