--- a/index.html
+++ b/index.html
@@ -1,131 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Adam Arzouni</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-
-<!-- Custom CSS -->
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stunning Portfolio | Creative Developer</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<!-- TOGGLES -->
-<div class="theme-switch" onclick="toggleMode()">
-  <i class="fas fa-lightbulb"></i>
-</div>
-<div class="lang-switch" onclick="toggleLang()">EN / FR</div>
+    <nav id="navbar">
+        <div class="logo">PORTFOLIO.PRO</div>
+        <div class="nav-links">
+            <a href="#home">Home</a>
+            <a href="#work">Work</a>
+            <a href="#about">About</a>
+            <a href="#contact" class="btn-primary">Hire Me</a>
+        </div>
+    </nav>
 
-<!-- NAVIGATION -->
-<nav class="top-nav">
-  <button onclick="goToSection('about')">About</button>
-  <button onclick="goToSection('projects')">Projects</button>
-  <button onclick="goToSection('experience')">Experience</button>
-  <button onclick="goToSection('contact')">Contact</button>
-</nav>
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <h1 class="reveal">Building Digital <br><span>Experiences.</span></h1>
+            <p class="reveal">Web Developer & UI Designer specializing in high-end aesthetic apps.</p>
+        </div>
+        
+        <div class="marquee">
+            <div class="marquee-content">
+                <span>REACT</span> <span>TYPESCRIPT</span> <span>UI DESIGN</span> <span>NEXT.JS</span> 
+                <span>GLASSMORPHISM</span> <span>TAILWIND</span> <span>ANIMATION</span>
+                <span>REACT</span> <span>TYPESCRIPT</span> <span>UI DESIGN</span> <span>NEXT.JS</span> 
+            </div>
+        </div>
+    </section>
 
-<main>
+    <section id="work" class="section">
+        <h2 class="section-title">Selected Projects</h2>
+        <div class="bento-grid">
+            <div class="bento-item large reveal">
+                <div class="card-content">
+                    <h3>AI Dashboard</h3>
+                    <p>Enterprise SaaS Platform</p>
+                </div>
+            </div>
+            <div class="bento-item reveal">
+                <div class="card-content">
+                    <h3>Crypto App</h3>
+                </div>
+            </div>
+            <div class="bento-item reveal">
+                <div class="card-content">
+                    <h3>Minimal E-com</h3>
+                </div>
+            </div>
+            <div class="bento-item wide reveal">
+                <div class="card-content">
+                    <h3>Creative Studio Portfolio</h3>
+                    <p>Interactions & Motion</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-  <!-- HERO / HEADER -->
-  <header class="header section fade-in">
-    <h1 class="fade-in">Adam Arzouni</h1>
-    <p class="en show fade-in">Mechanical Engineer • Aerospace • Creative Technologist</p>
-    <p class="fr fade-in">Ingénieur Mécanique • Aérospatial • Créatif Technologique</p>
-    <img class="profile-img fade-in" src="images/me.jpg" alt="Adam Arzouni">
-  </header>
+    <section id="about" class="section">
+        <div class="about-container">
+            <div class="about-text reveal">
+                <h2>About Me</h2>
+                <p>I create functional art through code. Based on the "vibe coding" philosophy, I focus on the aesthetic and user experience first.</p>
+            </div>
+            <div class="about-image reveal">
+                <div class="image-placeholder"></div>
+            </div>
+        </div>
+    </section>
 
-  <!-- ABOUT -->
-  <section id="about" class="section fade-in glass-section">
-    <h2 class="section-header en show">About Me</h2>
-    <h2 class="section-header fr">À propos</h2>
-    <p class="en show">
-      Mechanical engineer based in Montreal. I combine aerospace engineering with creative technology — from Arduino builds to smart TV apps and photography projects.
-    </p>
-    <p class="fr">
-      Ingénieur mécanique basé à Montréal. Je combine l’ingénierie aérospatiale avec la technologie créative — des projets Arduino aux applications TV et à la photographie.
-    </p>
-    <a href="https://raw.githubusercontent.com/adamarzouni/adam-arzouni/main/documents/Adam_Arzouni_CV.pdf" download class="cv-btn">
-      <i class="fas fa-file-download"></i> <span class="en show">Download CV</span><span class="fr">Télécharger CV</span>
-    </a>
-  </section>
+    <footer id="contact">
+        <div class="footer-content">
+            <h2>Let's build something <span class="glow-text">extraordinary.</span></h2>
+            <div class="social-links">
+                <a href="#">Twitter</a>
+                <a href="#">GitHub</a>
+                <a href="#">LinkedIn</a>
+            </div>
+        </div>
+    </footer>
 
-  <!-- PROJECTS -->
-  <section id="projects" class="section fade-in">
-    <h2 class="section-header en show">Projects</h2>
-    <h2 class="section-header fr">Projets</h2>
-
-    <div class="projects-grid">
-      <div class="project-card" onclick="openProject('wedding')">
-        <i class="fas fa-phone-alt fa-3x"></i>
-        <h3>Wedding Rotary Phone</h3>
-      </div>
-
-      <div class="project-card" onclick="openProject('tvapp')">
-        <i class="fas fa-tv fa-3x"></i>
-        <h3>Samsung TV App</h3>
-      </div>
-
-      <div class="project-card" onclick="openProject('photography')">
-        <i class="fas fa-camera-retro fa-3x"></i>
-        <h3>Photography</h3>
-      </div>
-    </div>
-  </section>
-
-  <!-- EXPERIENCE -->
-  <section id="experience" class="section fade-in glass-section">
-    <h2 class="section-header en show">Experience</h2>
-    <h2 class="section-header fr">Expérience</h2>
-    <div class="experience-box">
-      <h3>Pratt & Whitney Canada – Account Manager</h3>
-      <p>Managed aerospace projects, coordinated engineering teams, and maintained strong client relationships. Experience includes project management, technical consulting, and creative tech integration.</p>
-    </div>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="section fade-in glass-section">
-    <h2 class="section-header en show">Contact</h2>
-    <h2 class="section-header fr">Contact</h2>
-    <div class="contact-box">
-      <h3><span class="en show">Ready to start a project together?</span><span class="fr">Prêt à commencer un projet ensemble ?</span></h3>
-      <form action="https://formspree.io/f/xzdejweq" method="POST" class="contact-form">
-        <label><span class="en show">Name</span><span class="fr">Nom</span></label>
-        <input name="name" placeholder="Your Name" required>
-        <label><span class="en show">Email</span><span class="fr">Email</span></label>
-        <input name="email" placeholder="Your Email" type="email" required>
-        <label><span class="en show">Message</span><span class="fr">Message</span></label>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit"><i class="fas fa-paper-plane"></i><span class="en show">Send</span><span class="fr">Envoyer</span></button>
-      </form>
-    </div>
-  </section>
-
-</main>
-
-<!-- PROJECT MODAL -->
-<div id="projectModal" class="modal-full">
-  <div class="modal-content fade-in">
-    <span class="close" onclick="closeProject()">&times;</span>
-    <h2 id="modal-title" class="en show"></h2>
-    <h2 id="modal-title-fr" class="fr"></h2>
-    <p id="modal-desc" class="en show"></p>
-    <p id="modal-desc-fr" class="fr"></p>
-    <div class="gallery">
-      <button class="prev" onclick="changeImage(-1)"><i class="fas fa-chevron-left"></i></button>
-      <img id="modal-main-img" src="" alt="Project Image">
-      <button class="next" onclick="changeImage(1)"><i class="fas fa-chevron-right"></i></button>
-    </div>
-  </div>
-</div>
-
-<button id="topBtn"><i class="fas fa-arrow-up"></i></button>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
